Updating to blaze version 0.0.21 and Java verion 1.8